# mafw-iradio-source

./: Makefile.am  configure.ac
debian/: changelog  control  mafw-iradio-source.install  mafw-iradio-source.postinst  mafw-iradio-source.prerm  rules
iradio-source/: Makefile.am  mafw-iradio-source-plugin.c  mafw-iradio-source.c  mafw-iradio-source.h  mafw-iradio-vendor-setup.c  mafw-iradio-vendor-setup.h
tests/: Makefile.am  bookmarks.xml  test-bookmarks.xml  test-iradio-source.c  test.suppressions
